# aviasales_etl

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: Dockerfile  alembic.ini  api.py  crud.py  docker-compose.yaml  log_config.py  main.py  models.py  pyproject.toml  scraper.py  scraper_new.py
app/alembic/: env.py
app/alembic/versions/: 2026_03_25_1653-e36b51ccf9b4_initial_revision.py  2026_03_26_1239-5c6ff7e4c0fb_departure_date_column.py
worker/: scraper_async.py
